load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_test")

kt_jvm_test(
    name = "common_server_test",
    srcs = ["CommonServerTest.kt"],
    test_class = "com.CommonServerTest",
    deps = [
        "//src/main/kotlin/com:common_server_kt",
        "@maven//:org_mockito_kotlin_mockito_kotlin",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_mockito_mockito_inline",
        "@wfa_common_jvm//imports/java/org/junit",
        "@wfa_common_jvm//imports/kotlin/kotlin/test",
    ],
)

kt_jvm_test(
    name = "count_letters_server_test",
    srcs = ["CountLettersServerTest.kt"],
    test_class = "com.CountLettersServerTest",
    deps = [
        "//src/main/kotlin/com:common_server_kt",
        "//src/main/kotlin/com:count_letters_server_kt",
        "//src/main/kotlin/implementation:count_letters_service_implementation_kt",
        "@maven//:junit_junit",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@maven//:org_mockito_kotlin_mockito_kotlin",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_mockito_mockito_inline",
        "@wfa_common_jvm//imports/java/org/junit",
        "@wfa_common_jvm//imports/kotlin/kotlin/test",
    ],
)
