load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_test")
load("@rules_java//java:defs.bzl", "java_test")

kt_jvm_test(
    name = "duplicated_test",
    srcs = ["duplicated.kt"],
    test_class = "problem.DuplicateTest",
    deps = [
        "//src/main/kotlin/problem:duplicated_lib",
        "@wfa_common_jvm//imports/java/org/junit",
        "@wfa_common_jvm//imports/kotlin/kotlin/test",
    ],
)

kt_jvm_test(
    name = "service_test",
    srcs = ["service.kt"],
    test_class = "problem.Service",
    deps = [
        "//src/main/kotlin/problem:service_lib",
        "@wfa_common_jvm//imports/java/org/junit",
        "@wfa_common_jvm//imports/kotlin/kotlin/test",
    ],
)


kt_jvm_test(
    name = "B_test",
    srcs = ["B.kt"],
    test_class = "problem.UtilsTest",
    deps = [
        "//src/main/kotlin/problem:a_lib",
        "@wfa_common_jvm//imports/java/org/junit",
        "@wfa_common_jvm//imports/kotlin/kotlin/test",
    ],
)

java_test(
    name = "javatest",
    srcs = ["Test.java"],
    test_class = "com.cognite.Test",
    deps = ["//src/main/kotlin/problem:lib"],
)


kt_jvm_test(
    name = "my_service_test",
    srcs = [
        "MyServiceTest.kt",
        "//src/main/kotlin/problem:MyService.kt",
    ],
    deps = [
        "//src/main/kotlin/problem:my_service_lib",
        "@wfa_common_jvm//imports/java/org/junit",
        "@wfa_common_jvm//imports/kotlin/kotlin/test",
    ],
)