load("@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/gcloud/spanner/testing:macros.bzl", "spanner_emulator_test")

spanner_emulator_test(
    name = "FunTest",
    srcs = ["FunTest.kt"],
    test_class = "replicate_error.MyFunctionsTest",
    deps = [
        "//src/main/kotlin/replicate_error",
        "@wfa_common_jvm//imports/java/org/junit",
        "@wfa_common_jvm//imports/kotlin/kotlin/test",
    ],
)
